// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly when filters are present 1`] = `
<div
  className="App"
>
  <div
    className="title"
  >
    SpaceX Launch Programs
  </div>
  <div
    className="mainContainer"
  >
    <div
      className="mainCardContainer"
    >
      <div
        className="filters"
      >
        Filters
      </div>
      <div
        className="launchYear"
      >
        Launch Year
      </div>
      <div
        className="buttonContainer"
      >
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2006
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2007
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2008
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2009
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button isSelected"
            onClick={[Function]}
          >
            2010
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2011
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2012
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2013
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2014
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2015
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2016
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2017
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2018
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2019
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2020
          </button>
        </div>
      </div>
      <div
        className="launchYear"
      >
        Successful Launch
      </div>
      <div
        className="buttonContainer"
      >
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            True
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            False
          </button>
        </div>
      </div>
      <div
        className="launchYear"
      >
        Successful Landing
      </div>
      <div
        className="buttonContainer"
      >
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            True
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            False
          </button>
        </div>
      </div>
    </div>
    <div
      className="loader"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`App should render correctly when no filters are present 1`] = `
<div
  className="App"
>
  <div
    className="title"
  >
    SpaceX Launch Programs
  </div>
  <div
    className="mainContainer"
  >
    <div
      className="mainCardContainer"
    >
      <div
        className="filters"
      >
        Filters
      </div>
      <div
        className="launchYear"
      >
        Launch Year
      </div>
      <div
        className="buttonContainer"
      >
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2006
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2007
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2008
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2009
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2010
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2011
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2012
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2013
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2014
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2015
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2016
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2017
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2018
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2019
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            2020
          </button>
        </div>
      </div>
      <div
        className="launchYear"
      >
        Successful Launch
      </div>
      <div
        className="buttonContainer"
      >
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            True
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            False
          </button>
        </div>
      </div>
      <div
        className="launchYear"
      >
        Successful Landing
      </div>
      <div
        className="buttonContainer"
      >
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            True
          </button>
        </div>
        <div
          className="buttonDiv"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            False
          </button>
        </div>
      </div>
    </div>
    <div
      className="cardContainer"
    >
      <div
        className="mainCard"
      >
        <img
          alt="Image Unavailable"
          src="some url"
        />
        <div
          className="text missionName"
        >
          some mission name
           #
          some flight name
        </div>
        <div
          className="text missionId"
        >
          Mission Ids:
          <div
            className="missionIds"
          >
            123
          </div>
        </div>
        <div
          className="text launchYr"
        >
          Launch Year: 
          some launch year
        </div>
        <div
          className="text launchStatus"
        >
          Successful Launch: 
          True
        </div>
        <div
          className="text landingStatus"
        >
          Successful Landing: 
          True
        </div>
      </div>
    </div>
  </div>
</div>
`;
